--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.20",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
+        "sass-loader": "^12.6.0",
         "tailwindcss": "^3.2.4",
         "vite": "^4.0.0"
     }
