--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.0",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/support": "*",
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
